added: db-docker-container, Db-manage, Paginator, simple migrator, one simple unit test; moved: swagger to docker-container; deleted: swagger-ui from public
